--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,8 +1,17 @@
-<div class="container">
-  <div class="jumbotron mt-4">
-    <h1 class="display-4 text-center">404 Not Found
-      <span role="img" aria-label="Face with rolling eyes">🙄</span>
-    </h1>
-    <a href="/">← Back To Home</a>
+
+<div class="row">
+    <div class="col s12">
+      <div class="card N/A transparent">
+        <div class="card-content white-text">
+          <span class="card-title"></span>
+          <p></p>
+          <h1>Ooooops</h1>
+          <h1>Sorry...🙄,</h1>
+          <h1>404 Not Found</h1>
+        </div>
+        <div class="card-action white-text">
+           <a href="/"><h4>← Back To Home</h4></a>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
