--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,15 @@
+
+ <nav class="N/A transparent">
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo">What's for dinner?</a>
+      <ul id="nav-mobile" class="right">
+        <li><a href="badges.html"> <i class="material-icons">account_circle</i></a></li>
+        <li><a href="add.html"> <i class="material-icons">add_box</i></a></li>
+      </ul>
+    </div>
+  </nav> 
+
+{{!-- 
 <div id="home">
   <div class="container">
     <div class="row">
@@ -30,4 +42,4 @@
 </div>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="/js/index.js"></script>
+<script src="/js/index.js"></script> --}}
