update sequalize and styling changes

--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -5,7 +5,7 @@
         <div class="card-content white-text">
           <span class="card-title"></span>
           <p></p>
-          <h1>Ooooops</h1>
+          <h1 id="thisthingy">Ooooops</h1>
           <h1>Sorry...🙄,</h1>
           <h1>404 Not Found</h1>
         </div>
