--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -14,3 +14,6 @@ body{
 /* font-family: 'Josefin Sans', sans-serif;
 font-family: 'Libre Franklin', sans-serif; */
  } 
+ #thisthingy{
+   background-color: aquamarine;
+ }
