--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,13 +1,14 @@
 
 <div class="row">
     <div class="col s12">
-      <div class="card N/A transparent">
-        <div class="card-content white-text">
+      <div class="card N/A transparent z-depth-5">
+        <div class="card-content white-text ">
           <span class="card-title"></span>
-          <p></p>
-          <h1 id="thisthingy">Ooooops</h1>
+          <p id="thisthingy">
+          <h1>Ooooops</h1>
           <h1>Sorry...🙄,</h1>
           <h1>404 Not Found</h1>
+          </p>
         </div>
         <div class="card-action white-text">
            <a href="/"><h4>← Back To Home</h4></a>
