--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
 
- <nav class="N/A transparent">
+ <nav class="N/A transparent z-depth-5">
     <div class="nav-wrapper">
       <a href="#" class="brand-logo">What's for dinner?</a>
       <ul id="nav-mobile" class="right">
