--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -14,6 +14,6 @@ body{
 /* font-family: 'Josefin Sans', sans-serif;
 font-family: 'Libre Franklin', sans-serif; */
  } 
- #thisthingy{
-   background-color: aquamarine;
+ #thisthingy,.nav-wrapper{
+  background: rgba(0,0,0,.35);
  }
