--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -2,16 +2,14 @@
 <div class="row">
     <div class="col s12">
       <div class="card N/A transparent z-depth-5">
-        <div class="card-content white-text ">
+        <div id="thisthingy" class="card-content white-text">
           <span class="card-title"></span>
-          <p id="thisthingy">
+          <p> 
           <h1>Ooooops</h1>
           <h1>Sorry...🙄,</h1>
           <h1>404 Not Found</h1>
           </p>
-        </div>
-        <div class="card-action white-text">
-           <a href="/"><h4>← Back To Home</h4></a>
+           <a href="/"><h4 class="white-text">← Back To Home</h4></a>
         </div>
       </div>
     </div>
