--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
 <form action="/login" method="post">
     <div>
-        <label>Username:</label>
+        <label>Username/Email:</label>
         <input type="text" name="username"/>
     </div>
     <div>
