--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,10 +1,12 @@
 <form id="signup" name="signup" method="post" action="/signup">
-        <label for="email" >Email Address</label>
-        <input class="text" name="email" type="email" id="userEmail"/>
         <label for="firstname">Firstname</label>
         <input name="firstname" type="text" id="firstName"/>
         <label for="lastname">Lastname</label>
         <input name="lastname" type="text" />
+        <label for="username" >Username</label>
+        <input class="text" name="username" type="text" id="username"/>
+        <label for="email" >Email Address</label>
+        <input class="text" name="email" type="email" id="userEmail"/>
         <label for="password">Password</label>
         <input name="password" type="password" id="password" />
         <input class="btn" type="submit" value="Sign Up" />
