removed all passport stuff

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -9,5 +9,5 @@
         <input class="text" name="email" type="email" id="userEmail"/>
         <label for="password">Password</label>
         <input name="password" type="password" id="password" />
-        <input class="btn" type="submit" value="Sign Up" />
+        <input id="signup" class="btn" type="submit" value="Sign Up" />
     </form>
