--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -4,16 +4,50 @@
 
 body{
   background:
-  url(./001.jpeg) no-repeat center center fixed;
+  url(./008.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size:cover;
   background-size:cover;
 
-  font-family: 'Libre Baskerville', serif;
-/* font-family: 'Josefin Sans', sans-serif;
-font-family: 'Libre Franklin', sans-serif; */
+  /* font-family: 'Libre Baskerville', serif; */
+font-family: 'Josefin Sans', sans-serif;
+/* font-family: 'Libre Franklin', sans-serif; */
  } 
- #thisthingy,.nav-wrapper{
+
+ #thisthingy,.nav-wrapper,h3,.container{
   background: rgba(0,0,0,.35);
+  color:white;
  }
+
+.card{
+   background-color: rgba(243, 243, 250, 0.795);
+ } 
+
+input{
+  /* color:rgba(243, 243, 250, 0.795); */
+  color:rgb(28, 110, 97); 
+}
+
+input[type=submit] {
+  background-color: rgb(28, 110, 97); 
+  color: rgba(243, 243, 250, 0.795);
+  width:100%;
+  height: 45px;
+}
+
+#searchInput{
+  background-color: rgba(243, 243, 250, 0.795);
+  position: absolute;
+  left: 10%;
+  right: 10%;
+  bottom: 50%
+
+}
+
+#loginForm{
+  position: fixed;
+  left: 30%;
+  right: 30%;
+  top: 23%
+}
