--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,4 +1,4 @@
-<form id="signup" name="signup" method="post" action="/signup">
+<form id="signupForm" name="signup" method="post" action="/signup">
         <label for="firstname">Firstname</label>
         <input name="firstname" type="text" id="firstName"/>
         <label for="lastname">Lastname</label>
@@ -9,5 +9,5 @@
         <input class="text" name="email" type="email" id="userEmail"/>
         <label for="password">Password</label>
         <input name="password" type="password" id="password" />
-        <input id="signup" class="btn" type="submit" value="Sign Up" />
+        <input class="btn" type="submit" value="Sign Up" />
     </form>
