--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,5 @@
-   <div id="loginForm">
+
+ <div id="loginForm">
       <div class="card z-depth-5"> 
         <div class="card-content #424242 grey-text text-darken-3">
           <span class="card-title">Welcome...</span>
@@ -18,10 +19,16 @@
             <div>
               <input type="submit" value="Log In"/>
             </div>
-          </form>          
+          </form>  
+          <br>
+          <p>Don't have a account? <a href="/">Create one</a></p>      
         </div>
         <div class="card-action">
            <a href="/" class="#5d4037 brown-text text-darken-2">← Back To Home</a>
         </div>
       </div>
     </div>
+
+
+
+      
