starting .js files

--- a/views/layouts/results.handlebars
+++ b/views/layouts/results.handlebars
@@ -1,11 +1,11 @@
 <div class="container">
-<h3>My favourite Receipes</h3>
+<h3>My favourite Recipes</h3>
 
   <div class="col s12">
     <div class="card"> 
 
         <div class="card-content #424242 grey-text text-darken-3">
-          <span class="card-title">Receipes:</span>
+          <span class="card-title">Recipes:</span>
           
         <ul id="example-list" class="list-group">
           {{#each examples}}
