--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
   <title>What's for dinner?</title>
   <script src="https://code.jquery.com/jquery.js"></script>
-	<script src="js/index.js"></script>
+	<script src="js/apirequests.js"></script>
 </head>
 
 <body>
