--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -20,7 +20,7 @@
         <input class="btn" type="submit" value="Sign Up" />
           </form>
           <br>
-          <p>Already have a Times account? <a href="/">Log in</a></p>      
+          <p>Already have a account? <a href="/">Log in</a></p>      
         </div>
         <div class="card-action">
            <a href="/" class="#5d4037 brown-text text-darken-2">← Back To Home</a>
