--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,7 +11,7 @@
   <div class="row z-depth-5" id="searchInput">
         <div class="input-field col s11">
           <div class="search-wrapper">
-            <h5 class="#90a4ae blue-grey-text text-lighten-2">{{msg}}</h5>
+            <h5 class="#90a4ae blue-grey-text text-lighten-2"></h5>
             <input id="recipe-input" placeholder="Search">
             <button id='search' class="btn-floating #90a4ae blue-grey lighten-2"><i class="material-icons">search</i></button>
 
@@ -21,33 +21,7 @@
    </div>
 </div>
 
-{{!-- 
- <div id="loginForm">
-      <div class="card z-depth-5"> 
-        <div class="card-content #424242 grey-text text-darken-3">
-          <span class="card-title">Welcome...</span>
-           <p>
-           Log into your personal receipe box
-          <p>
-            <br>
-           <form id="logIn" action="/login" method="post">
-            <div>
-             <label>Username:</label>
-            <input type="text" name="username"/>
-            </div>
-            <div>
-             <label>Password:</label>
-             <input type="password" name="password"/>
-            </div>
-            <div>
-              <input type="submit" value="Log In"/>
-            </div>
-          </form>  
-          <br>
-          <p>Don't have a account? <a href="/">Create one</a></p>      
-        </div>       
-      </div>
-    </div> --}}
+
 
 
 
