--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,1 +1,26 @@
-<div>TEST LOGIN PAGE</div>
+<div id="loginForm">
+      <div class="card z-depth-5"> 
+        <div class="card-content #424242 grey-text text-darken-3">
+          <span class="card-title">Welcome...</span>
+           <p>
+           Log into your personal receipe box
+          <p>
+            <br>
+           <form id="logIn" action="/login" method="post">
+            <div>
+             <label>Username:</label>
+            <input type="text" name="username"/>
+            </div>
+            <div>
+             <label>Password:</label>
+             <input type="password" name="password"/>
+            </div>
+            <div>
+              <input type="submit" value="Log In"/>
+            </div>
+          </form>  
+          <br>
+          <p>Don't have a account? <a href="/">Create one</a></p>      
+        </div>       
+      </div>
+    </div>
