--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,22 +9,23 @@
   </nav> 
 
   <div class="row z-depth-5" id="searchInput">
-        <div class="input-field col s11">
+        <div id="listings" class="input-field col s12">
           <div class="search-wrapper">
             <h5 class="#90a4ae blue-grey-text text-lighten-2">{{msg}}</h5>
             <input id="recipe-input" placeholder="Search">
             <button id='search' class="btn-floating #90a4ae blue-grey lighten-2"><i class="material-icons">search</i></button>
-
-            <div class="search-results">
-
-
-            </div>
-
+<p></p>
+<div class="search-results">
+</div>
+       
        </div>
    </div>
 </div>
 
+
+
 {{!-- 
+
  <div id="loginForm">
       <div class="card z-depth-5"> 
         <div class="card-content #424242 grey-text text-darken-3">
