--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,12 +16,12 @@
       <button id='search' class="btn-floating #90a4ae blue-grey lighten-2"><i class="material-icons">search</i></button>
 
       <div class="search-results">
-        <div class="row">
+        {{!-- <div class="row">
           <div class="col md3">Bread</div>
           <div class="col md3">http://www.bread.com</div>
           <div class="col md3">[image will go here]</div>
           <div class="col md3">Eggs, Flour, %2 milk</div>
-        </div>
+        </div> --}}
       </div>
 
     </div>
