--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,4 +1,4 @@
-    <nav class="N/A transparent z-depth-5 nav-extended">
+<nav class="N/A transparent z-depth-5 nav-extended">
     <div class="nav-wrapper">
       <a href="/" class="brand-logo">What's for dinner?</a>
       <ul id="nav-mobile" class="right">
@@ -9,17 +9,15 @@
   </nav> 
 
   <div class="row z-depth-5" id="searchInput">
-        <div class="input-field col s11">
+        <div id="listings" class="input-field col s12">
           <div class="search-wrapper">
             <h5 class="#90a4ae blue-grey-text text-lighten-2">{{msg}}</h5>
             <input id="recipe-input" placeholder="Search">
             <button id='search' class="btn-floating #90a4ae blue-grey lighten-2"><i class="material-icons">search</i></button>
-
-            <div class="search-results">
-
-
-            </div>
-
+<p></p>
+<div class="search-results">
+</div>
+       
        </div>
    </div>
 </div>
