--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
            Log into your personal receipe box
           <p>
             <br>
-           <form id="logIn" action="/login" method="post">
+           <form id="logIn" action="/index" method="post">
             <div>
              <label>Username:</label>
             <input type="text" name="username"/>
