--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -6,7 +6,7 @@
            Create your free account!
           <p>
             <br>
-           <form id="signupForm" name="signup" method="post" action="/signup">
+           <form id="signupForm" name="signup" method="GET" action="/signup">
         <label for="firstname">Firstname</label>
         <input name="firstname" type="text" id="firstName"/>
         <label for="lastname">Lastname</label>
