--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -2,8 +2,8 @@
     <div class="nav-wrapper">
       <a href="/" class="brand-logo">What's for dinner?</a>
       <ul id="nav-mobile" class="right">
-        <li><a href="/example/:id"> <i class="material-icons">account_circle</i></a></li>
-        <li><a href="/create"> <i class="material-icons">add_box</i></a></li>
+        <li><a href="/index"> <i class="material-icons">account_circle</i></a></li>
+        <li><a href="/shoppingList"> <i class="material-icons">add_box</i></a></li>
       </ul>
     </div>
   </nav> 
