--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,9 +1,9 @@
-<nav class="N/A transparent z-depth-5 nav-extended">
+ <nav class="N/A transparent z-depth-5 nav-extended">
     <div class="nav-wrapper">
       <a href="/" class="brand-logo">What's for dinner?</a>
       <ul id="nav-mobile" class="right">
         <li><a href="/example/:id"> <i class="material-icons">account_circle</i></a></li>
-        <li><a href="/create"> <i class="material-icons">add_box</i></a></li>
+        <li><a class="waves-effect waves-light #263238 blue-grey darken-4 btn">Sign out</a></li>
       </ul>
     </div>
   </nav> 
@@ -13,7 +13,7 @@
           <div class="search-wrapper">
             <h5 class="#90a4ae blue-grey-text text-lighten-2">{{msg}}</h5>
             <input id="recipe-input" placeholder="Search">
-            <button id='search' class="btn-floating #90a4ae blue-grey lighten-2"><i class="material-icons">search</i></button>
+            <button id="search" class="btn-floating #90a4ae blue-grey lighten-2"><i class="material-icons">search</i></button>
 <p></p>
 <div class="search-results">
 </div>
