--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -38,7 +38,7 @@
         <div class="card-content #424242 grey-text text-darken-3">
           <span class="card-title">Welcome...</span>
            <p>
-           Log into your personal receipe box
+           Log into your personal recipe box
           <p>
             <br>
            <form id="logIn" action="/login" method="post">
