--- a/views/submit.handlebars
+++ b/views/submit.handlebars
@@ -3,7 +3,7 @@
       <div class="card"> 
         <div class="card-content #004d40 teal-text text-darken-4">
 
-<h2><i class="large material-icons"> playlist_add_check</i>Your messege has been submited!</h2>
+<h2><i class="large material-icons"> playlist_add_check</i>Your message has been submitted!</h2>
         
         </div>
         <div class="card-action">
