--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-{{!-- <div id="loginForm">
+<div id="loginForm">
       <div class="card z-depth-5"> 
         <div class="card-content #424242 grey-text text-darken-3">
           <span class="card-title">Welcome...</span>
@@ -23,41 +23,7 @@
           <p>Don't have a account? <a href="signup">Create one</a></p>      
         </div>       
       </div>
-    </div> --}}
-
-
- <div class="container">
-
- <div class="row">
-    <div class="col s12">
-      <div class="card"> 
-        <div class="card-content #424242 grey-text text-darken-3">
-          <span class="card-title">Shopping List</span>
-
-   <form action="POST">
-      <div class="row">
-        <div class="input-field col s6">
-          <input id="receipe_name" type="text" class="validate">
-          <label for="receipe_name"></label>
-          <p>Receipe Name</p>
-        </div>
-      </div>
-      
-      <div class="row">
-        <div class="input-field col s12">
-          <textarea id="textarea1" class="materialize-textarea"></textarea>
-          <label for="textarea1"></label>
-          <p>Ingredients</p>
-        </div>
-      </div>
-       <button id="submit" class="btn #90a4ae blue-grey lighten-2">Submit</button>
-    </form>
-        
-        </div>
-        <div class="card-action">
-           <a href="/" class="#5d4037 brown-text text-darken-2">← Back To Home</a>
-        </div>
-      </div>
     </div>
-  </div> 
-</div>  
+
+
+ 
