--- a/views/shoppingList.handlebars
+++ b/views/shoppingList.handlebars
@@ -1,3 +1,7 @@
+
+
+
+
  <div class="container">
 
  <div class="row">
@@ -6,11 +10,12 @@
         <div class="card-content #424242 grey-text text-darken-3">
           <span class="card-title">Card Title</span>
 
+
    <form action="POST">
       <div class="row">
         <div class="input-field col s6">
           <input id="receipe_name" type="text" class="validate">
-          <label for="receipe_name">Receipe Name</label>
+          <label for="receipe_name"><script type="text/javascript">document.write(printTitle)</script></label>
         </div>
       </div>
       <div class="row">
@@ -28,7 +33,7 @@
       <div class="row">
         <div class="input-field col s12">
           <textarea id="textarea1" class="materialize-textarea"></textarea>
-          <label for="textarea1">Textarea</label>
+          <label for="textarea1"><script type="text/javascript">document.write(printIngredients)</script></label>
         </div>
       </div>
        <button id="submit" class="btn #90a4ae blue-grey lighten-2">Submit</button>
