--- a/views/shoppingList.handlebars
+++ b/views/shoppingList.handlebars
@@ -1,39 +1,23 @@
-
-
-
-
- <div class="container">
+<div class="container">
 
  <div class="row">
     <div class="col s12">
       <div class="card"> 
         <div class="card-content #424242 grey-text text-darken-3">
-          <span class="card-title">Card Title</span>
+          <span class="card-title">Shopping List</span>
 
 
    <form action="POST">
       <div class="row">
         <div class="input-field col s6">
           <input id="receipe_name" type="text" class="validate">
-          <label for="receipe_name"><script type="text/javascript">document.write(printTitle)</script></label>
-        </div>
-      </div>
-      <div class="row">
-        <div class="input-field col s12">
-          <input id="password" type="password" class="validate">
-          <label for="password">Password</label>
-        </div>
-      </div>
-      <div class="row">
-        <div class="input-field col s12">
-          <input id="email" type="email" class="validate">
-          <label for="email">Email</label>
+          <label for="receipe_name">Recipe Name:  <script type="text/javascript">document.write(printTitle)</script></label>
         </div>
       </div>
       <div class="row">
         <div class="input-field col s12">
           <textarea id="textarea1" class="materialize-textarea"></textarea>
-          <label for="textarea1"><script type="text/javascript">document.write(printIngredients)</script></label>
+          <label for="textarea1">Ingredients:  <script type="text/javascript">document.write(printIngredients)</script></label>
         </div>
       </div>
        <button id="submit" class="btn #90a4ae blue-grey lighten-2">Submit</button>
