trying to write to SQL

--- a/views/shoppingList.handlebars
+++ b/views/shoppingList.handlebars
@@ -20,7 +20,7 @@
           <label for="textarea1">Ingredients:  <script type="text/javascript">document.write(printIngredients)</script></label>
         </div>
       </div>
-       <button id="submit" class="btn #90a4ae blue-grey lighten-2">Submit</button>
+       <button id="submit" class="btn #90a4ae blue-grey lighten-2">Save to favorites</button>
     </form>
         
         </div>
