--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -3,7 +3,7 @@
       <a href="/" class="brand-logo">What's for dinner?</a>
       <ul id="nav-mobile" class="right">
 
-        <li><a href="/index"> <i class="material-icons">account_circle</i>Hello,{{userObj}}!</a></li>
+        <li><a href="/index"> <i class="material-icons left">account_circle</i>Hello, {{username}}!</a></li>
         <li><a href="/signout"> <i class="material-icons">add_box</i></a></li>
       </ul>
     </div>
