--- a/views/shoppingList.handlebars
+++ b/views/shoppingList.handlebars
@@ -9,7 +9,7 @@
         <div class="input-field col s6">
           <input id="receipe_name" type="text" class="validate">
           <label for="receipe_name"></label>
-          <p>Receipe Name</p>
+          <p>Recipe Name</p>
         </div>
       </div>
       
