enter button on search

--- a/views/shoppingList.handlebars
+++ b/views/shoppingList.handlebars
@@ -25,7 +25,7 @@
         
         </div>
         <div class="card-action">
-           <a href="/" class="#5d4037 brown-text text-darken-2">← Back To Home</a>
+           <a href="/search" class="#5d4037 brown-text text-darken-2">← Back To Home</a>
         </div>
       </div>
     </div>
