--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -2,7 +2,7 @@
     <div class="nav-wrapper">
       <a href="/" class="brand-logo">What's for dinner?</a>
       <ul id="nav-mobile" class="right">
-        <li><a href="/index"> <i class="material-icons">account_circle</i></a></li>
+        <li><a href="/results"> <i class="material-icons">account_circle</i></a></li>
         <li><a href="/shoppingList"> <i class="material-icons">add_box</i></a></li>
       </ul>
     </div>
