fixed signup page so submit button submits to create account and also forward to index page

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -17,7 +17,7 @@
         <input class="text" name="email" type="email" id="userEmail"/>
         <label for="password">Password</label>
         <input name="password" type="password" id="password" />
-        <input class="btn" type="submit" value="Sign Up" />
+        <input class="btn" type="button" onClick="location.href='index'" value="submit" />
           </form>
           <br>
           <p>Already have a account? <a href="index">Log in</a></p>      
@@ -27,6 +27,3 @@
         </div>
       </div>
     </div>
-
-
-  
