--- a/views/shoppingList.handlebars
+++ b/views/shoppingList.handlebars
@@ -10,14 +10,14 @@
    <form method="POST" action="/api/shoppingLists">
       <div class="row">
         <div class="input-field col s6">
-          <input id="receipe_name" type="text" class="validate">
-          <label for="receipe_name">Recipe Name:  <script type="text/javascript">document.write(printTitle)</script></label>
+          {{!-- <input id="receipe_name" type="text" class="validate"> --}}
+          <input name="title" for="receipe_name">Recipe Name:  <script type="text/javascript">document.write(printTitle)</script></input>
         </div>
       </div>
       <div class="row">
         <div class="input-field col s12">
-          <textarea id="textarea1" class="materialize-textarea"></textarea>
-          <label for="textarea1">Ingredients:  <script type="text/javascript">document.write(printIngredients)</script></label>
+          {{!-- <textarea id="textarea1" class="materialize-textarea"></textarea> --}}
+          <input name="ingredients" for="textarea1">Ingredients:  <script type="text/javascript">document.write(printIngredients)</script></input>
         </div>
       </div>
        <button id="submitList" class="btn #90a4ae blue-grey lighten-2">Save to favorites</button>
@@ -32,9 +32,22 @@
   </div> 
 </div>  
 
-<div>
+{{!-- <div>
   <button id="testButton">TEST</button>
 </div>
 
 <script>
 
+$(document).ready(function() {
+
+  $(document).on("click", '#testButton', function (event) {
+    event.preventDefault();
+    $.ajax({
+      url: "/api/shoppingLists",
+      method: "POST",
+      contentType: "application/json",
+      data: JSON.stringify({title: "title", ingredients: "ingredietns"})
+    });
+  });
+});
+</script> --}}
