--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -2,8 +2,9 @@
     <div class="nav-wrapper">
       <a href="/" class="brand-logo">What's for dinner?</a>
       <ul id="nav-mobile" class="right">
-        <li><a href="/example/:id"> <i class="material-icons">account_circle</i></a></li>
-        <li><a href="/create"> <i class="material-icons">add_box</i></a></li>
+
+        <li><a href="/index"> <i class="material-icons left">account_circle</i>Hello, {{username}}!</a></li>
+        {{!-- <li><a href="/signout"> <i class="material-icons">add_box</i></a></li> --}}
       </ul>
     </div>
   </nav> 
@@ -11,7 +12,7 @@
   <div class="row z-depth-5" id="searchInput">
         <div id="listings" class="input-field col s12">
           <div class="search-wrapper">
-            <h5 class="#90a4ae blue-grey-text text-lighten-2">{{msg}}</h5>
+            <h5 class="#90a4ae blue-grey-text text-lighten-2">Check what you have in your fridge!</h5>
             <input id="recipe-input" placeholder="Search">
             <button id='search' class="btn-floating #90a4ae blue-grey lighten-2"><i class="material-icons">search</i></button>
 <p></p>
