--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -6,7 +6,7 @@
            Create your free account!
           <p>
             <br>
-           <form id="signupForm" name="signup" method="GET" action="/signup">
+           <form id="signupForm" name="signup" method="post" action="/signup">
         <label for="firstname">Firstname</label>
         <input name="firstname" type="text" id="firstName"/>
         <label for="lastname">Lastname</label>
@@ -17,7 +17,7 @@
         <input class="text" name="email" type="email" id="userEmail"/>
         <label for="password">Password</label>
         <input name="password" type="password" id="password" />
-        <input class="btn" type="submit" value="Sign Up" />
+        <input class="btn" type="submit" value="signup" />
           </form>
           <br>
           <p>Already have a account? <a href="index">Log in</a></p>      
@@ -27,6 +27,3 @@
         </div>
       </div>
     </div>
-
-
-  
