--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -16,9 +16,24 @@
             <input id="recipe-input" placeholder="Search">
             <button id='search' class="btn-floating #90a4ae blue-grey lighten-2"><i class="material-icons">search</i></button>
 <p></p>
-<div class="search-results">
-</div>
+
        
        </div>
    </div>
 </div>
+
+{{!-- <div class="card z-depth-5">
+        <div class="card-image, recipeCard">
+        <img max-width="100" height="200" src="${data.thumbnail}">
+          <span class="card-title">${data.title}</span>
+          <a class="btn-floating halfway-fab waves-effect waves-light #ef9a9a red lighten-3" id="addRec" href="shoppingList?title=${data.title}&ingredients=${data.ingredients}"><i class="material-icons">favorite_border</i></a>
+        </div>
+        <div class="card-content">
+          <p>${data.ingredients}</p>
+        </div>
+        <div class="card-action">
+          <a href="${data.href}" target="_blank">Read more</a>
+        </div>
+      </div>
+    </div>
+  </div> --}}
