--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,27 +1,20 @@
 
- <div id="loginForm">
-      <div class="card z-depth-5"> 
-        <div class="card-content #424242 grey-text text-darken-3">
-          <span class="card-title">Welcome...</span>
-           <p>
-           Log into your personal recipe box
-          <p>
-            <br>
-           <form id="logIn" action="/index" method="post">
-            <div>
-             <label>Username:</label>
-            <input type="text" name="username"/>
-            </div>
-            <div>
-             <label>Password:</label>
-             <input type="password" name="password"/>
-            </div>
-            <div>
-              <input type="submit" value="Log In"/>
-            </div>
-          </form>  
+<div id="loginForm">
+<br>
+<br>
+<br>
+<br>
+  <div class="card z-depth-5">
+    <div class="card-content #424242 grey-text text-darken-3">
+      <span class="card-title">What's for Dinner?</span>
           <br>
-          <p>Don't have a account? <a href="signup">Create one</a></p>      
-        </div>       
-      </div>
+        <div>
+            Search our site for recipes based on what you have in your fridge right now!
+        </div>
+          <br>
+           <p>Have an account? <a href="login">Start searching!</a></p>
+           <hr>
+          <p>Don't have a account? <a href="signup">Create one</a></p>
     </div>
+  </div>
+</div>
