--- a/views/partials/searchresults.handlebars
+++ b/views/partials/searchresults.handlebars
@@ -1,19 +1,15 @@
-{{#forEach cardInfo}}
 <div id="searchResults">
-    <div class="card z-depth-5">
-        <div class="card-image, recipeCard">
-        <img max-width="100" height="200" src="${data.thumbnail}">
-          <span class="card-title">{{title}}</span>
-          <a class="btn-floating halfway-fab waves-effect waves-light #ef9a9a red lighten-3" id="addRec" href="shoppingList?title=${data.title}&ingredients=${data.ingredients}"><i class="material-icons">favorite_border</i></a>
-        </div>
-        <div class="card-content">
-          <p>{{ingredients}}</p>
-        </div>
-        <div class="card-action">
-          <a href="${data.href}" target="_blank">Read more</a>
-        </div>
-      </div>
+  {{#each cardInfo}}
+  <div class="card z-depth-5">
+    <div class="card-image, recipeCard">
+      <span class="card-title">{{this.title}}</span>
+    </div>
+    <div class="card-content">
+      <p>{{this.ingredients}}</p>
+    </div>
+    <div class="card-action">
+      <a href="{{this.href}}" target="_blank">Read more</a>
     </div>
   </div>
+  {{/each}}
 </div>
-{{/forEach}}
