--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -4,7 +4,8 @@
     <ul id="nav-mobile" class="right">
 
       <li><a href="/index"> <i class="material-icons left">account_circle</i>Hello, {{username}}!</a></li>
-      <li><a href="/signout"> <i class="material-icons">add_box</i></a></li>
+      <li><a href="/favRecipes"> favs </a></li>
+      <li><a href="/shoppingList"> shopping </a></li>
     </ul>
   </div>
 </nav>
