--- a/views/favRecipes.handlebars
+++ b/views/favRecipes.handlebars
@@ -8,18 +8,14 @@
           <span class="card-title">Recipes:</span>
           
         <ul id="example-list" class="list-group">
-          {{#each examples}}
-          <li data-id="{{this.id}}" class="list-group-item">
-            <a href="example/{{this.id}}">{{this.text}}</a>
-            <button class="btn btn-danger float-right delete">ｘ</button>
+          {{#each favs}}
+          <li class="list-group-item">
+            {{title}}
           </li>
           {{/each}}
         </ul>
    
          </div>
-        <div class="card-action">
-           <a href="/" class="#5d4037 brown-text text-darken-2">← Back To Home</a>
-        </div>
 
     </div>
    </div>
