--- a/views/shoppingList.handlebars
+++ b/views/shoppingList.handlebars
@@ -20,7 +20,7 @@
           <input name="ingredients" for="textarea1">Ingredients:  </input>
         </div>
       </div>
-       <button id="submitList" class="btn #90a4ae blue-grey lighten-2">Save to favorites</button>
+       {{!-- <button id="submitList" class="btn #90a4ae blue-grey lighten-2">Save to favorites</button> --}}
     </form>
         
         </div>
