--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,14 +6,13 @@
 <br>
   <div class="card z-depth-5">
     <div class="card-content #424242 grey-text text-darken-3">
-      <span class="card-title">What's for Dinner?</span>
-          <br>
+      <span class="card-title">What is in your fridge?</span>
+          <hr>
         <div>
             Search our site for recipes based on what you have in your fridge right now!
         </div>
           <br>
            <p>Have an account? <a href="login">Start searching!</a></p>
-           <hr>
           <p>Don't have a account? <a href="signup">Create one</a></p>
     </div>
   </div>
