--- a/views/favRecipes.handlebars
+++ b/views/favRecipes.handlebars
@@ -2,34 +2,37 @@
 <br>
 
 <div class="container transparent">
- 
-<div class="container transparent">
 
- <div class="row">
+  
+  <div class="row" id="favs">
     <div class="col s12">
-      <div class="card"> 
+      <div class="card">
         <div class="card-content #424242 grey-text text-darken-3">
           <span class="card-title">Favorites</span>
+          <div>
+    <button id="getFavs" class="btn-flat #90a4ae blue-grey lighten-2"> see my favs</button>
+  </div>
 
-      {{#each results}}
-      <hr>
-      <div class="row">
-        <div class="col s12">
-          <div id="title">Recipe Name:  {{title}}</div>
-          <div id="ingredients">Ingredients: {{ingredients}} </div>
-        </div>
-      </div>
-      <hr>
-      {{/each}}
-        
+<div>
+  
+          {{#each results}}
+          <hr>
+          <div class="row">
+            <div class="col s12">
+              <div id="title">Recipe Name: {{title}}</div>
+              <div id="ingredients">Ingredients: {{ingredients}} </div>
+            </div>
+          </div>
+          <hr>
+          {{/each}}
+</div>
+
         </div>
         <div class="card-action">
-           <a href="/search" class="#5d4037 brown-text text-darken-2">← Didn't find anything? Search again!</a>
+          <a href="/search" class="#5d4037 brown-text text-darken-2">← Didn't find anything? Search again!</a>
         </div>
       </div>
     </div>
-  </div> 
-</div>  
+  </div>
 
-
-
+</div>
